[package]
name = "hello-wasm"
description = "Probando rust y webassembly"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.80"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true